# serverlessd

./: .gitignore  404.html  Cargo.toml  README.md  TODOS.md  build.rs  index.html  print.html  searcher-c2a407aa.js  searchindex-a01ace67.js  test.js  toc.html
.github/workflows/: ci.yml  docker.yml  docs.yml
crates/svld-blocks/: Cargo.toml
crates/svld-blocks/src/: client.rs  core.rs  replier.rs
crates/svld-language/: Cargo.toml
crates/svld-language/src/: bytes.rs  exception.rs  lib.rs  promise.rs  type_and_value.rs
crates/svld-readable-stream/: Cargo.toml
crates/svld-readable-stream/src/: block.rs  lib.rs  source.rs  state.rs
crates/svld-readable-stream/src/controller/: default.rs
crates/svld-rt/: Cargo.toml  build.rs
crates/svld-rt-kv/: Cargo.toml
crates/svld-rt-kv/src/: error.rs  lib.rs  store.rs  types.rs
crates/svld-rt-kv/src/backend/: memory.rs  mod.rs  sqlite.rs
crates/svld-rt/src/: compile.rs  intrinsics.rs  lib.rs  macros.rs  model.rs  pod.rs  worker.rs
crates/svld-rt/src/blocks/: client.rs  core.rs  mod.rs  replier.rs
crates/svld-rt/src/intrinsics/: building.rs  fetch.rs  files.rs  mod.rs  response.rs  retrieve.rs
crates/svld-rt/src/intrinsics/readable_stream/: block.rs  core.rs  mod.rs  source.rs  state.rs
crates/svld-rt/src/intrinsics/readable_stream/controller/: default.rs  mod.rs
crates/svld-rt/src/pod/: core.rs  handle.rs  task.rs  trigger.rs
crates/svld-rt/src/serverless/: code_store.rs  core.rs  error.rs  handle.rs  mod.rs  trigger.rs
crates/svld-rt/src/worker/: error.rs  handle.rs  mod.rs  monitor.rs  state.rs  task.rs  trigger.rs
crates/svld-state-extensions/: Cargo.toml
crates/svld-state-extensions/src/: client.rs  core.rs  lib.rs  replier.rs
crates/svld-types/: Cargo.toml
crates/svld-types/src/: lib.rs
docker/: dockerfile
docs/: book.toml
docs/src/: SUMMARY.md  index.md
intrinsics/: index.js
scripts/: install.sh
src/: app.rs  compile.rs  macros.rs  main.rs  task.rs
src/intrinsics/: building.rs  fetch.rs  files.rs  mod.rs  response.rs  utils.rs
src/language/: exception.rs  mod.rs  promise.rs
src/runtime/: mod.rs  monitor.rs  pod.rs  serverless.rs  state.rs  worker.rs
src/runtime/pod/: core.rs  handle.rs  mod.rs  task.rs  trigger.rs
src/runtime/serverless/: app.rs  app_service.rs  code_store.rs  core.rs  handle.rs  mod.rs  task.rs  trigger.rs
src/runtime/worker/: error.rs  handle.rs  monitor.rs  state.rs  task.rs  trigger.rs
static/: index.html
templates/: 404.html  base.html  error.html  svld.html
tests/: fetch.js  loop.js  outer-await.js  outer.js  readable-stream.js  wait.js
tests/fails/: fetch.js  response.js
