[package]
name = "serverlessd"
version = "0.0.4"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
salvo = { version = "0.91.1", features = ["affix-state"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt", "rt-multi-thread", "sync", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = "1.0.228"
tokio-util = { version = "0.7.18", features = ["rt"] }
sha2 = "0.11.0"
jsonwebtoken = "10.3.0"
uuid = { version = "1.23.0", features = ["v4"] }
hex = "0.4.3"
dotenvy = "0.15.7"
async-trait = "0.1.89"
rand = "0.10.0"
askama = { version = "0.15.6", features = ["alloc", "derive"] }
bytes = "1.11.1"

# custom deps
svld-rt = { path = "./crates/svld-rt" }

[dev-dependencies]
# pnet = "0.35.0"

[workspace]
members = [
    "crates/svld-language",
    "crates/svld-readable-stream",
    "crates/svld-blocks",
    "crates/svld-rt",
]
