[package]
name = "svld-readable-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
v8 = "147.1.0"
serde = "1.0.228"
tokio = { version = "1.51.1", features = ["rt", "rt-multi-thread"] }
tokio-stream = "0.1.18"
futures-util = "0.3.32"
thiserror = "2.0.18"

# custom deps
svld-language = { path = "../svld-language" }
