[package]
name = "svld-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
v8 = "147.1.0"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt", "rt-multi-thread", "sync", "macros", "signal", "fs"] }
tracing = "0.1.44"
serde = "1.0.228"
tokio-util = { version = "0.7.18", features = ["rt"] }
bytes = "1.11.1"

# custom deps
svld-language = { path = "../svld-language" }
svld-types = { path = "../svld-types" }
typeid = "1.0.3"
